# go-crea-fb-msg-fast-api

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  GUARDRAILS.md  LOGFIRE.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_ASSESSMENT.md  RUNBOOK.md  TESTING.md  TEST_FIX_PLAN.md  coverage.xml  junit.xml  main.py  pyproject.toml  railway.toml
.cursor/plans/: comprehensive_test_implementation_plan_483dd72f.plan.md
.github/workflows/: ci.yml
.hypothesis/constants/: 1321637d368a6724  2cb873553d9c4f10  3320abc78630a221  398f56ebff5c3504  40885b6fb4e9169f  460ad6b4a4222894  5a4f7d06b9c8205f  5fa0cb67541f36b0  68e54260e4c26564  7e3c5de042251846  842e41bc3d902d92  8b50f535c13f84d4  90adde42a79786c0  99413fd42c41f490  aac90cb5c855598e  ae98ea92a21ecabf  b4f90a2ba85e3776  c07a4af8936ef941  c14e13baf0ad84d6  ce580a5b100a39d7  d85c075cab230b83  dc5532116d87c267
docs/: CURSOR_IMPLEMENTATION_PROMPT.md  CURSOR_QUICK_PROMPT.md  FACEBOOK_SETUP_QUICK.md
migrations/: 001_initial.sql  002_multi_tenant.sql  003_reference_doc_nullable_bot_id.sql  004_test_conversations.sql  005_user_profiles.sql  006_scraped_pages_index.sql
prompts/: agent_system_instructions.md
src/: __init__.py  config.py  constants.py  logging_config.py  main.py
src/api/: health.py  setup.py  webhook.py
src/cli/: __init__.py  setup_cli.py
src/db/: __init__.py  client.py  migrate.py  query_executor.py  repository.py
src/middleware/: __init__.py  correlation_id.py  rate_limiter.py
src/models/: agent_models.py  config_models.py  message_models.py  messenger.py  scraper_models.py  user_models.py
src/services/: agent_service.py  copilot_service.py  embedding_service.py  facebook_service.py  input_sanitizer.py  message_processor.py  messaging_protocol.py  prompt_guard.py  reference_doc.py  scraper.py  website_scraper.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_health_endpoint.py  test_main.py  test_webhook_message_flow.py  test_webhook_verification.py
tests/integration/: __init__.py  test_agent_integration.py  test_repository_db.py  test_scraper_copilot.py
tests/stateful/: __init__.py  test_agent_conversation.py  test_bot_configuration.py
tests/unit/: test_agent_service.py  test_config.py  test_copilot_service.py  test_db_client.py  test_embedding_service.py  test_facebook_service.py  test_hypothesis.py  test_input_sanitizer.py  test_logging.py  test_message_processor.py  test_models.py  test_prompt_guard.py  test_query_executor.py  test_rate_limiter.py  test_reference_doc.py  test_repository.py  test_scraper.py  test_setup_cli.py  test_webhook.py  test_website_scraper.py
